--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -19,12 +19,14 @@
 		<span class="helper-text" data-error="Введите URL картинки"></span>
 	</div>
 
+	<input type="hidden" name="_csrf" value="{{ csrf }}">
 	<input name="id" type="hidden" value="{{ course.id }}">
 
 	<button type="submit" class="btn btn-primary">Редактировать курс</button>
 </form>
 
 <form action="/courses/remove" method="POST">
+	<input type="hidden" name="_csrf" value="{{ csrf }}">
 	<input type="hidden" name="id" value="{{ course.id }}">
 	<button class="btn red">Удалить курс</button>
 </form>
