--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -23,6 +23,12 @@
 					<li><a href="/add">Добавить курс</a></li>
 				{{/if}}
 
+				{{#if isProifle}}
+					<li class="active"><a href="/profile">Профиль</a></li>
+				{{else}}
+					<li><a href="/profile">Профиль</a></li>
+				{{/if}}
+
 				{{#if isCart}}
 					<li class="active"><a href="/cart">Корзина</a></li>
 				{{else}}
